Form alignment fixed

--- a/src/scss/pages/_login_and_register.scss
+++ b/src/scss/pages/_login_and_register.scss
@@ -5,10 +5,15 @@
     padding: 20px;
     margin: 30px auto 10px auto;
     max-width: 320px;
+    min-width: 320px
   }
 
   .back {
     max-width: 320px;
     margin: 0 auto;
   }
+}
+
+.login-and-registration {
+  min-height: 65vh;
 }
